<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">fikri_s_application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_edit_profill">Edit Profill</string>
  <string name="lbl_menu_hari_ini">Menu Hari Ini </string>
  <string name="lbl_email">\@email</string>
  <string name="lbl_andika_budi">Andika Budi</string>
  <string name="lbl_fikri_ramadhani2">Fikri Ramadhani</string>
  <string name="lbl_bio">Bio :</string>
  <string name="lbl_back">Back</string>
  <string name="lbl_0">0</string>
  <string name="lbl_nama2">Nama :</string>
  <string name="lbl_judul_masakan">Judul  Masakan</string>
  <string name="lbl_fikri_ramadhani">FIkri Ramadhani</string>
  <string name="msg_langkah_langkah">Langkah Langkah :</string>
  <string name="lbl_view">View</string>
  <string name="msg_mau_masak_apa_h">Mau masak Apa Hari ini  ?</string>
  <string name="lbl_langkah_langkah">Langkah Langkah</string>
  <string name="msg_cerita_dibalik">Cerita dibalik masakan</string>
  <string name="lbl_login">Login</string>
  <string name="lbl_post">Post</string>
  <string name="lbl_new_password">New password</string>
  <string name="lbl_judul_masakan2">Judul Masakan </string>
  <string name="msg_confirm_new_pas">Confirm New password</string>
  <string name="lbl_simpan">Simpan</string>
  <string name="lbl_email2">Email</string>
  <string name="lbl_draft">Draft</string>
  <string name="lbl_save2">Save</string>
  <string name="lbl_buat_resep">Buat Resep</string>
  <string name="lbl_foto_resep">Foto Resep</string>
  <string name="lbl_username2">Username</string>
  <string name="msg_sudah_punya_aku">Sudah Punya Akun ? Login</string>
  <string name="lbl_bahan_bahan">Bahan Bahan :</string>
  <string name="msg_cerita_dibalik2">cerita dibalik masakan ini</string>
  <string name="lbl_kategori">Kategori</string>
  <string name="lbl_asinan_jakarta">Asinan Jakarta</string>
  <string name="lbl_upload_foto">Upload Foto</string>
  <string name="lbl_hobi_masak2">Hobi Masak....</string>
  <string name="lbl_nama">Nama</string>
  <string name="msg_belum_punya_aku">Belum Punya Akun ? Daftar</string>
  <string name="lbl_fikri_email_com">fikri@email.com</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_daftar">Daftar</string>
  <string name="lbl_upload_image">Upload Image</string>
  <string name="msg_cari_menu_hari">Cari Menu hari ini.....</string>
  <string name="msg_pencarian_popul">Pencarian Populer Hari Ini...</string>
  <string name="lbl_40_menit">40 Menit</string>
  <string name="lbl_hobi_masak">Hobi Masak</string>
  <string name="lbl_username">username</string>
  <string name="lbl_save">Save </string>
  <string name="lbl_rekomendasi">Rekomendasi</string>
</resources>
