<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="editprofilVM" type="com.fikrisapplication.app.modules.editprofil.data.viewmodel.EditprofilVM"/>
    </data>
    <FrameLayout android:id="@+id/frameEditProfil"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <View
            android:background="@drawable/rectangle_bg_bluegray_100_radius_5"
            android:id="@+id/viewRectangleFortySeven"
            android:layout_gravity="center"
            android:layout_height="844dp"
            android:layout_marginEnd="@dimen/_5pxh" android:layout_width="@dimen/_385pxh"/>
        <LinearLayout android:id="@+id/linearColumnellipseeleven"
            android:layout_gravity="top|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_37pxv"
            android:layout_marginEnd="@dimen/_99pxh"
            android:layout_marginStart="@dimen/_99pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <View
                android:background="@drawable/rectangle_bg_white_a700_radius_73_5"
                android:id="@+id/viewEllipseEleven"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_147pxh"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_24pxh" android:layout_width="@dimen/_144pxh"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnUploadFoto"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_7pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_7pxv"
                android:singleLine="true"
                android:text="@string/lbl_upload_foto"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_3" tools:text="@string/lbl_upload_foto"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRownama"
            android:layout_gravity="top|start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_294pxv"
            android:layout_marginEnd="@dimen/_70pxh"
            android:layout_marginStart="@dimen/_70pxh"
            android:layout_marginTop="@dimen/_294pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txtNama"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.3" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{editprofilVM.editprofilModel.txtNama}"
                style="@style/txtIntersemibold16" tools:text="@string/lbl_nama2"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtFikriRamadhani"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_weight="0.7" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{editprofilVM.editprofilModel.txtFikriRamadhani}"
                style="@style/txtIntersemibold16" tools:text="@string/lbl_fikri_ramadhani2"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearColumnemail"
            android:layout_gravity="bottom|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_171pxv"
            android:layout_marginEnd="@dimen/_48pxh"
            android:layout_marginStart="@dimen/_48pxh"
            android:layout_marginTop="@dimen/_171pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowemail"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylegray_51cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmail"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_weight="0.26"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{editprofilVM.editprofilModel.txtEmail}"
                    style="@style/txtIntersemibold16" tools:text="@string/lbl_email2"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmailOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_83pxh"
                    android:layout_marginStart="@dimen/_25pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_weight="0.74"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{editprofilVM.editprofilModel.txtEmailOne}"
                    style="@style/txtInterlight16" tools:text="@string/lbl_fikri_email_com"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowbio"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylegray_51cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtBio"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_weight="0.24"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{editprofilVM.editprofilModel.txtBio}"
                    style="@style/txtIntersemibold16" tools:text="@string/lbl_bio"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtHobiMasak"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_105pxh"
                    android:layout_marginStart="@dimen/_26pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_weight="0.76"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{editprofilVM.editprofilModel.txtHobiMasak}"
                    style="@style/txtInterextralight16" tools:text="@string/lbl_hobi_masak2"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnNewPassword"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_9pxv"
                android:singleLine="true"
                android:text="@string/lbl_new_password"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_4" tools:text="@string/lbl_new_password"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnConfirmNewPassword"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_36pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_9pxv"
                android:singleLine="true"
                android:text="@string/msg_confirm_new_pas"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_4" tools:text="@string/msg_confirm_new_pas"/>
            <LinearLayout android:id="@+id/linearRowback"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_53pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnBack"
                    android:layout_height="@dimen/_34pxv"
                    android:layout_width="@dimen/_105pxh"
                    android:paddingBottom="@dimen/_7pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_7pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_back"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_5" tools:text="@string/lbl_back"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnSave"
                    android:layout_height="@dimen/_34pxv"
                    android:layout_marginStart="@dimen/_80pxh"
                    android:layout_width="@dimen/_105pxh"
                    android:paddingBottom="@dimen/_7pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_7pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_save2"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_5" tools:text="@string/lbl_save2"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRownamaOne"
            android:layout_gravity="top|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_287pxv"
            android:layout_marginEnd="@dimen/_48pxh"
            android:layout_marginStart="@dimen/_48pxh"
            android:layout_marginTop="@dimen/_287pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylegray_51cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtNamaOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginStart="@dimen/_22pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_weight="0.31" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{editprofilVM.editprofilModel.txtNamaOne}"
                style="@style/txtIntersemibold16" tools:text="@string/lbl_nama2"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtFikriRamadhaniOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginEnd="@dimen/_84pxh"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_weight="0.69" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{editprofilVM.editprofilModel.txtFikriRamadhaniOne}"
                style="@style/txtInterextralight16" tools:text="@string/lbl_fikri_ramadhani2"/>
        </LinearLayout>
    </FrameLayout>
</layout>
