<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="homepageRowModel" type="com.fikrisapplication.app.modules.homepage.data.model.HomepageRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowasinanjakarta"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal" style="@style/groupStylebluegray_1">
        <LinearLayout android:gravity="end"
            android:id="@+id/linearColumngroupfortynine"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_6pxv"
            android:layout_marginStart="@dimen/_4pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_weight="0.92" android:layout_width="0dp" android:orientation="vertical">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowgroupfortynine"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_34pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageButton
                    android:background="@drawable/rectangle_bg_gray_50_radius_11"
                    android:id="@+id/btnGroupFortyNine"
                    android:layout_height="@dimen/_22pxh"
                    android:layout_width="@dimen/_22pxh"
                    android:paddingHorizontal="@dimen/_5pxh"
                    android:paddingVertical="@dimen/_5pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_group49" tools:ignore="ContentDescription"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAndikaBudi"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{homepageRowModel.txtAndikaBudi}"
                    style="@style/txtInterregular12_1" tools:text="@string/lbl_andika_budi"/>
            </LinearLayout>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtAsinanJakarta"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_34pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_69pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{homepageRowModel.txtAsinanJakarta}"
                style="@style/txtInterregular12_1" tools:text="@string/lbl_asinan_jakarta"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowvector"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_87pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageVectorOne1"
                    android:layout_height="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_7pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector_black_900"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_vector_black_900"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMenitCounter"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{homepageRowModel.txtMenitCounter}"
                    style="@style/txtInterregular5" tools:text="@string/lbl_40_menit"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView android:id="@+id/imageVectorOne2"
            android:layout_height="@dimen/_13pxh"
            android:layout_marginBottom="@dimen/_4pxv"
            android:layout_marginEnd="@dimen/_5pxh"
            android:layout_marginTop="@dimen/_117pxv"
            android:layout_width="@dimen/_11pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_vector_black_900_13x11"
            tools:ignore="ContentDescription" tools:src="@drawable/img_vector_black_900_13x11"/>
    </LinearLayout>
</layout>
